Correção sobre mim e icones

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <section class="chamada">
             <div class="chamada__conteudo">
                 <div>
-                    <h2 class="chamada__titulo" >Olá meu nome é Adriano Lucio e construo páginas web</h2>
-                    <p class="chamada__texto">Eu sou formada em lorem ipsum sit amet consectetur e 
-                        atualmente estou participando no projeto Oracle ONE na Alura.</p>
+                    <h2 class="chamada__titulo" >Olá meu nome é Adriano Lucio e sou desenvolvedor jr.</h2>
+                    <p class="chamada__texto">Sou formado em GSI - Gestão de Sistema da Informação
+                         estou participando no projeto ONE - Oracle Next Education na Alura.</p>
                 </div>
 
                 <figure>
-                    <img class="chamada__imagem-rosto" src="img/rosto.jpg" alt="Foto do rosto Adriano Lucio">
+                    <img class="chamada__imagem-rosto" src="img/adriano.png" alt="Foto do rosto Adriano Lucio">
                 </figure>
             </div>
             <ul class="chamada__redes-sociais">
@@ -61,13 +61,11 @@
         </section>
         <section class="sobre-mim">
             <h3 class="sobre-mim__titulo">Sobre mim</h3>
-            <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
-                dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
-                semper sagittis ligula et lacinia.
+            <p class="sobre-mim__texto">Sou Adriano Lucio profissional de TI com mais de 20 anos de experiência, apaixonado por tecnologia. Desde que iniciei minha trajetória profissional, sempre procurou fazer o melhor. 
+                Atualmente procurando novos desafios, a pouco mais de um ano estou desenvolvendo experiência em desenvolvimento de sistema para múltipla plataformas.
+                Meus hobbies prediletos são motos, ouvir música, séries de TV, jogos e ler.
             </p>
-            <p class="sobre-mim__texto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque velit velit, volutpat semper
-                dignissim dictum, imperdiet ut lacus. Quisque gravida ex a mattis pretium. Suspendisse potenti. Ut
-                semper sagittis ligula et lacinia. Aenean sit amet felis venenatis, egestas metus vitae, aliquet metus.
+            <p class="sobre-mim__texto">
             </p>
             <figure class="sobre-mim__assinatura">
                 <img class="sobre-mim__assinatura-manuscrita" src="img/assinatura.png" alt="Assinatura manuscrita">
@@ -90,6 +88,14 @@
                         <img class="skill-hobby__conteudo-imagem" src="img/ico/css.svg" alt="Logo CSS">
                         <p>CSS</p>
                     </li>
+                    <li class="skill-hobby__conteudo-lista">
+                        <img class="skill-hobby__conteudo-imagem" src="img/ico/java.svg" alt="Logo Java">
+                        <p>Java</p>
+                    </li>
+                    <li class="skill-hobby__conteudo-lista">
+                        <img class="skill-hobby__conteudo-imagem" src="img/ico/mysql.svg" alt="Logo MySQL">
+                        <p>MySQL</p>
+                    </li>
                 </ul>
 
             </div>
@@ -97,8 +103,8 @@
             <div class="skill-hobby__conteudo">
                 <ul>
                     <li class="skill-hobby__conteudo-lista">
-                        <img class="skill-hobby__conteudo-imagem" src="img/ico/andaskate.svg" alt="Andar de skate">
-                        <p>Andar de skate</p>
+                        <img class="skill-hobby__conteudo-imagem" src="img/ico/motocicleta.svg" alt="Andar de skate">
+                        <p>Motocicleta/p>
                     </li>
                     <li class="skill-hobby__conteudo-lista">
                         <img class="skill-hobby__conteudo-imagem" src="img/ico/fone.svg" alt="Ouvir música">
@@ -106,7 +112,15 @@
                     </li>
                     <li class="skill-hobby__conteudo-lista">
                         <img class="skill-hobby__conteudo-imagem" src="img/ico/monitor.svg" alt="Filmes">
-                        <p>Filmes</p>
+                        <p>Filmes/Séries</p>
+                    </li>
+                    <li class="skill-hobby__conteudo-lista">
+                        <img class="skill-hobby__conteudo-imagem" src="img/ico/games.svg" alt="Controle Jogos">
+                        <p>Jogos</p>
+                    </li>
+                    <li class="skill-hobby__conteudo-lista">
+                        <img class="skill-hobby__conteudo-imagem" src="img/ico/livro.svg" alt="Livro">
+                        <p>Ler</p>
                     </li>
                 </ul>
             </div>
